TAF-ORCH-02: use jdk 21